--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
           <a class="dropdown-item" href="index.html">Full Portfolio</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled">Disabled</a>
-      </li>
+      
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -48,19 +46,19 @@
 </nav>
 <div class="jumbotron">
   <container>
-    <div class="row">
+      <div class="row">
         <div class="col-md-4">
             <img src="media/IMG_20260115_124811.jpg" width="400" height="300" alt="Me">
         </div>
         <div class="col-md-8">
             <p style="font-size: 20px;" >Hello my name is Cooper Miller I was born In St louis and now reside in chicago in the neighborhood of Lakeveiw on the north east side of the city. I really like to travel and over the summer I went to Greece and also traveled to New Orleans.</p>
-            <img src="media/download (23).jpeg">
-            <img src="media/download (24).jpeg">
-            <img src="media/download (25).jpeg">
-          </div>
+            <img src="media/Orleans.jpeg">
+            <img src="media/Orleans2.jpeg">
+            <img src="media/Greece.jpeg">
+        </div>
 
         
-    </div>
+      </div>
     <div class="jumbotron">
       <table border="3" class="box">
         <tr>
