--- a/index.html
+++ b/index.html
@@ -38,17 +38,14 @@
       </li>
       
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+   
   </div>
 </nav>
 <div class="jumbotron">
   <container>
       <div class="row">
-        <div class="col-md-4">
-            <img src="media/IMG_20260115_124811.jpg" width="400" height="300" alt="Me">
+        <div class="col-md-4" class="rounded-pill">
+            <img  src="media/IMG_20260115_124811.jpg" width="400" height="300" alt="Me">
         </div>
         <div class="col-md-8">
             <p style="font-size: 20px;" >Hello my name is Cooper Miller I was born In St louis and now reside in chicago in the neighborhood of Lakeveiw on the north east side of the city. I really like to travel and over the summer I went to Greece and also traveled to New Orleans.</p>
