--- a/bootsrap.html
+++ b/bootsrap.html
@@ -63,6 +63,9 @@
       <li class="nav-item">
         <a class="nav-link" href="bootsrap.html">Recipe</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="hobbies.html">My Hobbies</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
           Dropdown
@@ -74,14 +77,9 @@
           <a class="dropdown-item" href="index.html">Full Portfolio</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled">Disabled</a>
-      </li>
+      
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    
   </div>
 </nav>
     <div class="container">
