--- a/recipe.html
+++ b/recipe.html
@@ -65,6 +65,9 @@
       <li class="nav-item">
         <a class="nav-link" href="bootsrap.html">Recipe</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="hobbies.html">My Hobbies</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
           Dropdown
@@ -77,10 +80,7 @@
         </div>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    
   </div>
 </nav>
 
