--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         </div>
         <div class="col-md-8">
             <p style="font-size: 20px;" >Hello my name is Cooper Miller I was born In St louis and now reside in chicago in the neighborhood of Lakeveiw on the north east side of the city. I really like to travel and over the summer I went to Greece and also traveled to New Orleans.</p>
-            <img src="media/download(23).jpeg">
-            <img src="media/download(24).jpeg">
-            <img src="media/download(25).jpeg">
+            <img src="media/Orleans.jpeg">
+            <img src="media/Orleans2.jpeg">
+            <img src="media/Greece.jpeg">
           </div>
 
         
