--- a/hobbies.html
+++ b/hobbies.html
@@ -75,7 +75,7 @@
                 <!-- Germany -->
                 <div class="col-md-4">
                     <div class="card shadow">
-                        <img src="media/download(24).jpeg" class="card-img-top" alt="Travel">
+                        <img src="media/Greece.jpeg" class="card-img-top" alt="Travel">
                         <div class="card-body">
                             <h5 class="card-title">Travel</h5>
                             <p>
