--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <!-- Column 2: Travel Card -->
             <div class="col-md-4  align-items-start">
                 <div class="card shadow">
-                    <img src="media/download(24).jpeg" class="card-img-top" alt="Travel">
+                    <img src="media/Greece.jpeg" class="card-img-top" alt="Travel">
                     <div class="card-body">
                         <h5 class="card-title">Travel</h5>
                         <p>
