--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <table border="3" class="box">
                         <tr>
                             <td rowspan="4">
-                                <img src="media/Myself.jpg" alt="Student Photo" width="50" height="50" class="imageStyle">
+                                <img src="media/Myself.jpg" alt="Student Photo" width="50" height="50" class="image">
                             </td>
                             <td colspan="4">LANE TECH H. S. COLLEGE PREP</td>
                         </tr>
