--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <container>
     <div class="row">
         <div class="col-md-4">
-            <img src="media/" class="rounded-pill"width="400" height="300" alt="Me">
+            <img src="media/Myself.jpg" class="rounded-pill"width="400" height="300" alt="Me">
         </div>
         <div class="col-md-8">
             <p style="font-size: 20px;" >Hello my name is Cooper Miller I was born In St louis and now reside in chicago in the neighborhood of Lakeveiw on the north east side of the city. I really like to travel and over the summer I went to Greece and also traveled to New Orleans.</p>
